syntax = "proto3";

package com.account.poc_bank_grpc;

option java_multiple_files = true;
option java_package = "com.account.pocbankgrpc";
option java_outer_classname = "TransferServiceProto";

service TransferService {
  rpc Transfer (TransferRequest) returns (TransferResponse);
}

message TransferRequest {
  string fromAccountId = 1;
  string toAccountId = 2;
  double amount = 3;
}

message TransferResponse {
  bool success = 1;
  string message = 2;
}
